--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -138,7 +138,7 @@
     </style>
 </head>
 <body>
-    <h1>Your Spotify Dashboard</h1>
+    <h1>Spotify Dashboard</h1>
 
     <!-- <div id="shared-tracks-container" style="margin-top: 20px;"></div> -->
 
