--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -181,7 +181,7 @@
 </div>
 
 
-
+<!-- 
   <div class="menu-container">
     <button id="feed-button" class="menu-button">Feed</button>
     <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
@@ -192,7 +192,38 @@
       <a href="#" id="menu-life-top-tracks">Life Top Tracks</a>
       <a href="#" id="menu-recently-played">Recently Played</a>
     </div>
+  </div> -->
+
+  <div class="menu-container">
+  <button id="feed-button" class="menu-button">Feed</button>
+  <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
+
+  <div id="menu" class="menu hidden">
+    <a href="#" data-submenu="top-tracks" class="menu-link">Top Tracks</a>
+    <div id="submenu-top-tracks" class="submenu hidden">
+      <a href="#">Track 1</a><br>
+      <a href="#">Track 2</a>
+    </div>
+
+    <a href="#" data-submenu="top-artists" class="menu-link">Top Artists</a>
+    <div id="submenu-top-artists" class="submenu hidden">
+      <a href="#">Artist A</a><br>
+      <a href="#">Artist B</a>
+    </div>
+
+    <a href="#" data-submenu="life-top-tracks" class="menu-link">Life Top Tracks</a>
+    <div id="submenu-life-top-tracks" class="submenu hidden">
+      <a href="#">Track X</a><br>
+      <a href="#">Track Y</a>
+    </div>
+
+    <a href="#" data-submenu="recently-played" class="menu-link">Recently Played</a>
+    <div id="submenu-recently-played" class="submenu hidden">
+      <a href="#">Song α</a><br>
+      <a href="#">Song β</a>
+    </div>
   </div>
+</div>
 
 <div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
   <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
@@ -434,30 +465,62 @@ loadSharedTracks();
     </script>
 
 <!-- menu button -->
-     <script>
-  const menuButton = document.getElementById("menu-button");
-  const menu = document.getElementById("menu");
+     <!-- <script>
+    const menuButton = document.getElementById("menu-button");
+    const menu = document.getElementById("menu");
 
-  // Add this: Select all your sub-dropdowns
+    menuButton.addEventListener("click", () => {
+      menu.classList.toggle("hidden");
+    });
+
+    document.addEventListener("click", (event) => {
+      if (!menu.contains(event.target) && !menuButton.contains(event.target)) {
+        menu.classList.add("hidden");
+      }
+    });
+  </script> -->
+  <script>
+  const menuButton   = document.getElementById("menu-button");
+  const menu         = document.getElementById("menu");
+  const links        = document.querySelectorAll(".menu-link");
   const subDropdowns = document.querySelectorAll(".submenu");
+  let menuOpen       = false;
 
+  // Toggle main menu and (on close) hide all submenus
   menuButton.addEventListener("click", () => {
-    // Toggle the main menu
-    menu.classList.toggle("hidden");
+    menuOpen = !menuOpen;
+    menu.classList.toggle("hidden", !menuOpen);
 
-    // Hide all submenus
-    subDropdowns.forEach(sub => sub.classList.add("hidden"));
+    if (!menuOpen) {
+      subDropdowns.forEach(sub => sub.classList.add("hidden"));
+    }
   });
 
-  document.addEventListener("click", (event) => {
-    if (!menu.contains(event.target) && !menuButton.contains(event.target)) {
-      menu.classList.add("hidden");
+  // Open each submenu on its link-click, hide siblings
+  links.forEach(link => {
+    link.addEventListener("click", e => {
+      e.preventDefault();
+      const key     = link.getAttribute("data-submenu");
+      const submenu = document.getElementById(`submenu-${key}`);
 
-      // Also close all submenus when clicking outside
+      // Hide all other submenus
+      subDropdowns.forEach(s => {
+        if (s !== submenu) s.classList.add("hidden");
+      });
+
+      // Toggle this one
+      submenu.classList.toggle("hidden");
+    });
+  });
+
+  // Click outside: close menu + submenus
+  document.addEventListener("click", e => {
+    if (!menu.contains(e.target) && !menuButton.contains(e.target)) {
+      menuOpen = false;
+      menu.classList.add("hidden");
       subDropdowns.forEach(sub => sub.classList.add("hidden"));
     }
   });
 </script>
-
 </body>
 </html>
