--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -135,24 +135,44 @@
     .hidden {
       display: none;
     }
-        
-    #dynamic-bg {
+
+    @keyframes pulse {
+  0%, 100% { transform: scale(1); opacity: 0.15; }
+  50% { transform: scale(1.2); opacity: 0.3; }
+}
+
+@keyframes flicker {
+  0%, 100% { opacity: 0.2; }
+  50% { opacity: 0.4; }
+}
+
+#dynamic-bg {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
-  pointer-events: none; /* so it doesn't interfere with clicks */
-  z-index: -1; /* behind all content */
+  pointer-events: none;
+  z-index: -1;
   background: radial-gradient(circle at center, #1DB954, #000000 70%);
   overflow: hidden;
+  animation: rotate 120s linear infinite;
+  transform-origin: center center;
+}
+
+@keyframes rotate {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
 
 .circle {
   position: absolute;
   border-radius: 50%;
-  opacity: 0.2;
   mix-blend-mode: screen;
   filter: blur(15px);
   background: radial-gradient(circle, #1DB954 0%, transparent 70%);
-  animation-timing-function: linear;
+  animation-timing-function: ease-in-out;
+  animation-name: pulse, flicker;
+  animation-duration: 4s, 6s;
+  animation-iteration-count: infinite, infinite;
+  animation-direction: alternate, alternate;
 }
 
     </style>
