--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -136,44 +136,37 @@
       display: none;
     }
 
-    @keyframes pulse {
-  0%, 100% { transform: scale(1); opacity: 0.15; }
-  50% { transform: scale(1.2); opacity: 0.3; }
-}
+    @keyframes gradientBG {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
 
-@keyframes flicker {
-  0%, 100% { opacity: 0.2; }
-  50% { opacity: 0.4; }
-}
+    #dynamic-bg {
+        position: fixed;
+        top: 0; left: 0; right: 0; bottom: 0;
+        pointer-events: none; /* so it doesn't interfere with clicks */
+        z-index: -1; /* behind all content */
+        background: radial-gradient(circle at center, #1DB954, #000000 70%);
+        overflow: hidden;
+    }
 
-#dynamic-bg {
-  position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
-  pointer-events: none;
-  z-index: -1;
-  background: radial-gradient(circle at center, #1DB954, #000000 70%);
-  overflow: hidden;
-  animation: rotate 120s linear infinite;
-  transform-origin: center center;
-}
+    .circle {
+    position: absolute;
+    border-radius: 50%;
+    opacity: 0.2;
+    mix-blend-mode: screen;
+    filter: blur(15px);
+    background: radial-gradient(circle, #1DB954 0%, transparent 70%);
+    animation-timing-function: linear;
+    }
 
-@keyframes rotate {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-.circle {
-  position: absolute;
-  border-radius: 50%;
-  mix-blend-mode: screen;
-  filter: blur(15px);
-  background: radial-gradient(circle, #1DB954 0%, transparent 70%);
-  animation-timing-function: ease-in-out;
-  animation-name: pulse, flicker;
-  animation-duration: 4s, 6s;
-  animation-iteration-count: infinite, infinite;
-  animation-direction: alternate, alternate;
-}
 
     </style>
 </head>
@@ -212,6 +205,12 @@
         <h2>Your Recently Played Tracks</h2>
         <ul id="recently-played-list"></ul>
     </div>
+    
+    <div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
+    <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
+    <div id="shared-tracks-container">Loading...</div>
+    </div>
+
 
 <!-- currently playing -->
 <div id="current-track">
@@ -235,11 +234,6 @@
       <a href="#" id="menu-recently-played">Recently Played</a>
     </div>
   </div>
-
-<div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
-  <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
-  <div id="shared-tracks-container">Loading...</div>
-</div>
 
 <script>
   const feedButton = document.getElementById('feed-button');
