--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,90 +1,86 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Dashboard</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Spotify Dashboard</title>
+  <style>
+    /* Your original styles here... */
 
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #191414; 
-            color: #FFFFFF;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-            text-align: center;
-            padding: 20px;
-            overflow-y: auto;
-        }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        h1 {
-            font-size: 3rem;
-            color: #1DB954; 
-            margin-bottom: 20px;
-        }
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #191414;
+      color: #FFFFFF;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+      padding: 20px;
+      overflow-y: auto;
+    }
 
-        button {
-            font-size: 1.2rem;
-            padding: 15px 30px;
-            background-color: #1DB954; 
-            color: #FFFFFF;
-            border: none;
-            border-radius: 30px;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            margin: 10px 0;
-            width: 250px;
-            text-align: center;
-        }
+    h1 {
+      font-size: 3rem;
+      color: #1DB954;
+      margin-bottom: 20px;
+    }
 
-        button:hover {
-            background-color: #1ed760; 
-            transform: scale(1.05);
-        }
+    button {
+      font-size: 1.2rem;
+      padding: 15px 30px;
+      background-color: #1DB954;
+      color: #FFFFFF;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      margin: 10px 0;
+      width: 250px;
+      text-align: center;
+    }
 
-        .dropdown {
-            margin-top: 20px;
-            width: 80%;
-            max-width: 600px;
-            background-color: #282828; 
-            border-radius: 12px;
-            padding: 20px;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
-            display: none; 
-        }
+    button:hover {
+      background-color: #1ed760;
+      transform: scale(1.05);
+    }
 
-        ul {
-            list-style: none;
-            padding: 0;
-        }
+    .dropdown {
+      margin-top: 20px;
+      width: 80%;
+      max-width: 600px;
+      background-color: #282828;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
+      display: none;
+    }
 
-        li {
-            font-size: 1.2rem;
-            margin: 10px 0;
-            color: #B3B3B3; 
-            font-weight: bold;
-        }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
 
-        .track-name {
-            color: #FFFFFF; 
-        }
+    li {
+      font-size: 1.2rem;
+      margin: 10px 0;
+      color: #B3B3B3;
+      font-weight: bold;
+    }
 
-        .artist-name {
-            color: #FFFFFF; 
-        }
+    .track-name,
+    .artist-name,
+    .genre-name {
+      color: #FFFFFF;
+    }
 
-        .genre-name {
-            color: #FFFFFF; 
-        }
-            body {
+    body {
       margin: 0;
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
       background-color: #191414;
@@ -125,6 +121,7 @@
       color: white;
       text-decoration: none;
       transition: background 0.3s ease;
+      touch-action: manipulation;
     }
 
     .menu a:hover {
@@ -137,91 +134,147 @@
     }
 
     @keyframes gradientBG {
-        0% {
-            background-position: 0% 50%;
-        }
-        50% {
-            background-position: 100% 50%;
-        }
-        100% {
-            background-position: 0% 50%;
-        }
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
     }
 
     #dynamic-bg {
-        position: fixed;
-        top: 0; left: 0; right: 0; bottom: 0;
-        pointer-events: none; /* so it doesn't interfere with clicks */
-        z-index: -1; /* behind all content */
-        background: radial-gradient(circle at center, #1DB954, #000000 70%);
-        overflow: hidden;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      pointer-events: none; /* so it doesn't interfere with clicks */
+      z-index: -1; /* behind all content */
+      background: radial-gradient(circle at center, #1DB954, #000000 70%);
+      overflow: hidden;
     }
 
     .circle {
-    position: absolute;
-    border-radius: 50%;
-    opacity: 0.2;
-    mix-blend-mode: screen;
-    filter: blur(15px);
-    background: radial-gradient(circle, #1DB954 0%, transparent 70%);
-    animation-timing-function: linear;
+      position: absolute;
+      border-radius: 50%;
+      opacity: 0.2;
+      mix-blend-mode: screen;
+      filter: blur(15px);
+      background: radial-gradient(circle, #1DB954 0%, transparent 70%);
+      animation-timing-function: linear;
     }
 
+    /* ==== MOBILE RESPONSIVE ==== */
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
 
-    </style>
+      h1 {
+        font-size: 2rem;
+      }
+
+      button.menu-button {
+        font-size: 20px;
+        padding: 10px 20px;
+        width: auto;
+      }
+
+      .menu-container {
+        position: fixed;
+        top: 0.5rem;
+        right: 0.5rem;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        z-index: 1000;
+      }
+
+      .menu {
+        position: fixed;
+        top: 3.5rem; /* below menu button */
+        right: 0.5rem;
+        width: 150px;
+        max-width: 90vw;
+        font-size: 0.9rem;
+        border-radius: 6px;
+      }
+
+      .dropdown {
+        width: 95vw;
+        max-width: none;
+        padding: 15px 10px;
+        margin-top: 15px;
+        font-size: 1rem;
+      }
+
+      ul {
+        font-size: 1rem;
+      }
+
+      #current-track {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+        margin-top: 15px;
+      }
+
+      #current-image {
+        width: 120px;
+        height: 120px;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div id="dynamic-bg"></div>
+  <div id="dynamic-bg"></div>
 
-    <h1>Spot-ON</h1>
-    <h5 style="color: #B3B3B3; margin-bottom: 20px;">your spotify details</h5>
-    <!-- <div id="shared-tracks-container" style="margin-top: 20px;"></div> -->
+  <h1>Spot-ON</h1>
+  <h5 style="color: #B3B3B3; margin-bottom: 20px;">your spotify details</h5>
 
-    <div id="shared-tracks" class="dropdown">
-        <h2>My Feed</h2>
-        <ul id="shared-tracks-list" style="margin-top: 20px; list-style: none; padding: 0;"></ul>
-    </div>
+  <div id="shared-tracks" class="dropdown">
+    <h2>My Feed</h2>
+    <ul id="shared-tracks-list" style="margin-top: 20px; list-style: none; padding: 0;"></ul>
+  </div>
 
+  <div id="tracks" class="dropdown">
+    <h2>Your Top 10 Tracks</h2>
+    <ul id="track-list"></ul>
+  </div>
 
-    <!-- <button id="fetch-tracks">Show My Tracks</button> -->
-    <div id="tracks" class="dropdown">
-        <h2>Your Top 10 Tracks</h2>
-        <ul id="track-list"></ul>
-    </div>
+  <div id="artists" class="dropdown">
+    <h2>Your Top 10 Artists</h2>
+    <ul id="artist-list"></ul>
+  </div>
 
-    <!-- <button id="fetch-artists">Show My Artists</button> -->
-    <div id="artists" class="dropdown">
-        <h2>Your Top 10 Artists</h2>
-        <ul id="artist-list"></ul>
-    </div>
+  <div id="top-tracks" class="dropdown">
+    <h2>Your Life Top Tracks</h2>
+    <ul id="top-tracks-list"></ul>
+  </div>
 
-    <!-- <button id="fetch-top-tracks">Life Top Track</button> -->
-    <div id="top-tracks" class="dropdown">
-        <h2>Your Life Top Tracks</h2>
-        <ul id="top-tracks-list"></ul>
-    </div>
+  <div id="recently-played" class="dropdown">
+    <h2>Your Recently Played Tracks</h2>
+    <ul id="recently-played-list"></ul>
+  </div>
 
-    <div id="recently-played" class="dropdown">
-        <h2>Your Recently Played Tracks</h2>
-        <ul id="recently-played-list"></ul>
-    </div>
-    
-    <div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
+  <div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
     <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
     <div id="shared-tracks-container">Loading...</div>
-    </div>
+  </div>
 
-
-<!-- currently playing -->
-<div id="current-track">
+  <div id="current-track">
     <img id="current-image" src="" alt="Album Art" />
     <div>
-        <div id="current-name">Not Playing</div>
-        <div id="current-artist"></div>
+      <div id="current-name">Not Playing</div>
+      <div id="current-artist"></div>
     </div>
-</div>
-
-
+  </div>
 
   <div class="menu-container">
     <button id="feed-button" class="menu-button">Feed</button>
