--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -203,13 +203,13 @@
         border-radius: 6px;
       }
 
-      .dropdown {
+      /* .dropdown {
         width: 95vw;
         max-width: none;
         padding: 15px 10px;
         margin-top: 15px;
         font-size: 1rem;
-      }
+      } */
 
       ul {
         font-size: 1rem;
@@ -230,6 +230,54 @@
         border-radius: 10px;
       }
     }
+    .dropdown {
+  margin-top: 20px;
+  width: 80%;
+  max-width: 600px;
+  background-color: #282828;
+  border-radius: 12px;
+  padding: 25px 30px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.7);
+  display: block; /* assuming you want them visible */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.dropdown:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 30px rgba(29, 185, 84, 0.8);
+}
+
+.dropdown h2 {
+  font-size: 2.2rem;
+  font-weight: 900;
+  color: #1DB954; /* Spotify green */
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+  text-shadow: 0 0 8px rgba(29, 185, 84, 0.7);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.dropdown ul {
+  list-style: none;
+  padding-left: 0;
+  color: #ccc;
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
+
+.dropdown li {
+  margin-bottom: 12px;
+  border-bottom: 1px solid #3a3a3a;
+  padding-bottom: 8px;
+  transition: color 0.3s ease;
+}
+
+.dropdown li:hover {
+  color: #1DB954;
+  cursor: pointer;
+}
+
   </style>
 </head>
 <body>
@@ -263,10 +311,6 @@
     <ul id="recently-played-list"></ul>
   </div>
 
-  <div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
-    <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
-    <div id="shared-tracks-container">Loading...</div>
-  </div>
 
   <div id="current-track">
     <img id="current-image" src="" alt="Album Art" />
@@ -286,6 +330,11 @@
       <a href="#" id="menu-life-top-tracks">Life Top Tracks</a>
       <a href="#" id="menu-recently-played">Recently Played</a>
     </div>
+  </div>
+
+  <div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
+    <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
+    <div id="shared-tracks-container">Loading...</div>
   </div>
 
 <script>
