--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -230,6 +230,7 @@
         border-radius: 10px;
       }
     }
+
     .dropdown {
   margin-top: 20px;
   width: 80%;
@@ -238,7 +239,7 @@
   border-radius: 12px;
   padding: 25px 30px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.7);
-  display: block; /* assuming you want them visible */
+  display: none;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
