--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -312,6 +312,10 @@
     <ul id="recently-played-list"></ul>
   </div>
 
+  <div id="feed-block" style="display:none; width:60%; max-width: 600px; background-color: rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px; margin-bottom: 20px;">
+  <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
+  <div id="shared-tracks-container">Loading...</div>
+</div>
 
   <div id="current-track">
     <img id="current-image" src="" alt="Album Art" />
@@ -331,11 +335,6 @@
       <a href="#" id="menu-life-top-tracks">Life Top Tracks</a>
       <a href="#" id="menu-recently-played">Recently Played</a>
     </div>
-  </div>
-
-  <div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
-    <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
-    <div id="shared-tracks-container">Loading...</div>
   </div>
 
 <script>
