--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -279,13 +279,75 @@
   cursor: pointer;
 }
 
+    .cool-subtitle {
+    font-size: 0.9rem;
+    color: #1ed760; /* Spotify green */
+    font-weight: 500;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    font-family: 'Arial Black', Arial, sans-serif;
+    text-shadow:
+      0 0 5px #1DB954,  /* subtle green glow */
+      0 0 10px #1ed760;
+    margin-bottom: 25px;
+  }
+
+    #current-track {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-top: 20px;
+}
+
+#current-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 0 10px #1DB954;
+}
+
+#current-image.spinning {
+  animation: spinFast 0.5s linear infinite;
+}
+
+@keyframes spinFast {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.music-note {
+  position: absolute;
+  color: #1DB954;
+  font-size: 12px;
+  user-select: none;
+  pointer-events: none;
+  animation-name: jumpUp;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes jumpUp {
+  0% {
+    opacity: 1;
+    transform: translate(0, 0) scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(var(--x), var(--y)) scale(1.5);
+  }
+}
+  
   </style>
 </head>
 <body>
   <div id="dynamic-bg"></div>
 
   <h1>Spot-ON</h1>
-  <h5 style="color: #B3B3B3; margin-bottom: 20px;">your spotify details</h5>
+<h5 class="cool-subtitle">your spotify details</h5>
 
   <div id="shared-tracks" class="dropdown">
     <h2>My Feed</h2>
@@ -630,7 +692,56 @@ loadSharedTracks();
 
   animate();
 
-  // Optional: on window resize, update center coordinates dynamically (handled on next frame)
+  const currentImage = document.getElementById('current-image');
+
+currentImage.addEventListener('mouseenter', () => {
+  currentImage.classList.add('spinning');
+});
+
+currentImage.addEventListener('mouseleave', () => {
+  currentImage.classList.remove('spinning');
+});
+
+currentImage.addEventListener('click', (e) => {
+  // Create multiple music notes on click
+  for (let i = 0; i < 7; i++) {
+    createMusicNote(e.clientX, e.clientY);
+  }
+});
+
+function createMusicNote(x, y) {
+  const note = document.createElement('div');
+  note.classList.add('music-note');
+  note.textContent = '♪';
+
+  // Random direction and distance
+  const angle = Math.random() * 2 * Math.PI;
+  const distance = 50 + Math.random() * 50;
+  const translateX = Math.cos(angle) * distance + 'px';
+  const translateY = -Math.abs(Math.sin(angle) * distance) + 'px'; // jump mostly upwards
+
+  note.style.setProperty('--x', translateX);
+  note.style.setProperty('--y', translateY);
+
+  // Random size for variation
+  note.style.fontSize = (10 + Math.random() * 15) + 'px';
+
+  // Position the note at the center of the image
+  const rect = currentImage.getBoundingClientRect();
+  note.style.left = (rect.left + rect.width / 2) + 'px';
+  note.style.top = (rect.top + rect.height / 2) + 'px';
+
+  document.body.appendChild(note);
+
+  // Animate and remove after animation
+  note.style.animationDuration = (800 + Math.random() * 400) + 'ms';
+  note.style.animationName = 'jumpUp';
+
+  note.addEventListener('animationend', () => {
+    note.remove();
+  });
+}
+
 </script>
 
 </body>
