--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -279,68 +279,88 @@
   cursor: pointer;
 }
 
-    .cool-subtitle {
-    font-size: 0.9rem;
-    color: #1ed760; /* Spotify green */
-    font-weight: 500;
-    letter-spacing: 0.12em;
-    text-transform: uppercase;
-    font-family: 'Arial Black', Arial, sans-serif;
-    text-shadow:
-      0 0 5px #1DB954,  /* subtle green glow */
-      0 0 10px #1ed760;
-    margin-bottom: 25px;
+h1 {
+  font-size: 3rem;
+  color: #1DB954; /* Spotify green */
+  text-shadow:
+    0 0 10px #1DB954,
+    0 0 20px #1ed760,
+    0 0 30px #1DB954,
+    0 0 40px #1ed760,
+    0 0 50px #1DB954;
+  margin-bottom: 20px;
+  font-weight: 900;
+}
+
+.cool-subtitle {
+  font-size: 0.9rem;
+  color: #ffffff; /* white-ish */
+  font-weight: 500;
+  letter-spacing: 0.12em;
+  text-transform: uppercase;
+  font-family: 'Arial Black', Arial, sans-serif;
+  text-shadow:
+    0 0 5px #fff,       /* subtle white glow */
+    0 0 10px #ccc;
+  margin-bottom: 25px;
+}
+
+#current-track {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 20px;
+    color: white;
   }
 
-    #current-track {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  margin-top: 20px;
-}
-
-#current-image {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-  position: relative;
-  z-index: 1;
-  box-shadow: 0 0 10px #1DB954;
-}
-
-#current-image.spinning {
-  animation: spinFast 0.5s linear infinite;
-}
-
-@keyframes spinFast {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-.music-note {
-  position: absolute;
-  color: #1DB954;
-  font-size: 12px;
-  user-select: none;
-  pointer-events: none;
-  animation-name: jumpUp;
-  animation-timing-function: ease-out;
-  animation-fill-mode: forwards;
-}
-
-@keyframes jumpUp {
-  0% {
-    opacity: 1;
-    transform: translate(0, 0) scale(1);
+  #current-image {
+    width: auto; /* keep original aspect ratio */
+    max-width: 150px; /* limit max size but keep proportions */
+    height: auto;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
   }
-  100% {
-    opacity: 0;
-    transform: translate(var(--x), var(--y)) scale(1.5);
+
+  /* Spin on hover */
+  #current-image:hover {
+    animation: spin 0.5s linear infinite;
   }
-}
-  
+
+  @keyframes spin {
+    0% { transform: rotate(0deg);}
+    100% { transform: rotate(360deg);}
+  }
+
+  /* Container for music notes */
+  #notes-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    pointer-events: none; /* so it doesn’t block clicks */
+  }
+
+  /* Style for individual notes */
+  .music-note {
+    position: absolute;
+    bottom: 10px;
+    font-size: 12px;
+    color: #1DB954;
+    animation: jumpUp 1.2s forwards ease-out;
+    user-select: none;
+  }
+
+  /* Jump up animation */
+  @keyframes jumpUp {
+    0% {
+      opacity: 1;
+      transform: translateY(0) scale(1);
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(-100px) scale(1.5);
+    }
+  }
   </style>
 </head>
 <body>
@@ -692,57 +712,25 @@ loadSharedTracks();
 
   animate();
 
-  const currentImage = document.getElementById('current-image');
+const img = document.getElementById('current-image');
+  const notesContainer = document.getElementById('notes-container');
 
-currentImage.addEventListener('mouseenter', () => {
-  currentImage.classList.add('spinning');
-});
+  img.addEventListener('click', () => {
+    // Create multiple music notes with different sizes and positions
+    for(let i=0; i<6; i++) {
+      const note = document.createElement('div');
+      note.classList.add('music-note');
+      note.style.left = `${20 + Math.random() * 110}px`; // random horizontal position inside container
+      note.style.fontSize = `${10 + Math.random() * 15}px`; // random size
+      note.textContent = '♪'; // music note character
+      notesContainer.appendChild(note);
 
-currentImage.addEventListener('mouseleave', () => {
-  currentImage.classList.remove('spinning');
-});
-
-currentImage.addEventListener('click', (e) => {
-  // Create multiple music notes on click
-  for (let i = 0; i < 7; i++) {
-    createMusicNote(e.clientX, e.clientY);
-  }
-});
-
-function createMusicNote(x, y) {
-  const note = document.createElement('div');
-  note.classList.add('music-note');
-  note.textContent = '♪';
-
-  // Random direction and distance
-  const angle = Math.random() * 2 * Math.PI;
-  const distance = 50 + Math.random() * 50;
-  const translateX = Math.cos(angle) * distance + 'px';
-  const translateY = -Math.abs(Math.sin(angle) * distance) + 'px'; // jump mostly upwards
-
-  note.style.setProperty('--x', translateX);
-  note.style.setProperty('--y', translateY);
-
-  // Random size for variation
-  note.style.fontSize = (10 + Math.random() * 15) + 'px';
-
-  // Position the note at the center of the image
-  const rect = currentImage.getBoundingClientRect();
-  note.style.left = (rect.left + rect.width / 2) + 'px';
-  note.style.top = (rect.top + rect.height / 2) + 'px';
-
-  document.body.appendChild(note);
-
-  // Animate and remove after animation
-  note.style.animationDuration = (800 + Math.random() * 400) + 'ms';
-  note.style.animationName = 'jumpUp';
-
-  note.addEventListener('animationend', () => {
-    note.remove();
-  });
-}
-
-</script>
+      // Remove note after animation ends
+      note.addEventListener('animationend', () => {
+        note.remove();
+      });
+    }
+  });</script>
 
 </body>
 </html>
