--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -279,88 +279,29 @@
   cursor: pointer;
 }
 
-h1 {
+   h1 {
   font-size: 3rem;
-  color: #1DB954; /* Spotify green */
+  color: #1DB954;
+  margin-bottom: 10px;
   text-shadow:
-    0 0 10px #1DB954,
-    0 0 20px #1ed760,
-    0 0 30px #1DB954,
-    0 0 40px #1ed760,
-    0 0 50px #1DB954;
-  margin-bottom: 20px;
-  font-weight: 900;
+    0 0 5px #1db95488,  /* soft green glow */
+    0 0 15px #1db95433;
 }
 
 .cool-subtitle {
   font-size: 0.9rem;
-  color: #ffffff; /* white-ish */
+  color: #ffffff;
   font-weight: 500;
   letter-spacing: 0.12em;
   text-transform: uppercase;
   font-family: 'Arial Black', Arial, sans-serif;
   text-shadow:
-    0 0 5px #fff,       /* subtle white glow */
-    0 0 10px #ccc;
+    0 0 4px #ffffff55,
+    0 0 10px #ffffff22;
   margin-bottom: 25px;
 }
 
-#current-track {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-top: 20px;
-    color: white;
-  }
 
-  #current-image {
-    width: auto; /* keep original aspect ratio */
-    max-width: 150px; /* limit max size but keep proportions */
-    height: auto;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
-
-  /* Spin on hover */
-  #current-image:hover {
-    animation: spin 0.5s linear infinite;
-  }
-
-  @keyframes spin {
-    0% { transform: rotate(0deg);}
-    100% { transform: rotate(360deg);}
-  }
-
-  /* Container for music notes */
-  #notes-container {
-    position: relative;
-    width: 150px;
-    height: 150px;
-    pointer-events: none; /* so it doesn’t block clicks */
-  }
-
-  /* Style for individual notes */
-  .music-note {
-    position: absolute;
-    bottom: 10px;
-    font-size: 12px;
-    color: #1DB954;
-    animation: jumpUp 1.2s forwards ease-out;
-    user-select: none;
-  }
-
-  /* Jump up animation */
-  @keyframes jumpUp {
-    0% {
-      opacity: 1;
-      transform: translateY(0) scale(1);
-    }
-    100% {
-      opacity: 0;
-      transform: translateY(-100px) scale(1.5);
-    }
-  }
   </style>
 </head>
 <body>
@@ -712,25 +653,8 @@ loadSharedTracks();
 
   animate();
 
-const img = document.getElementById('current-image');
-  const notesContainer = document.getElementById('notes-container');
-
-  img.addEventListener('click', () => {
-    // Create multiple music notes with different sizes and positions
-    for(let i=0; i<6; i++) {
-      const note = document.createElement('div');
-      note.classList.add('music-note');
-      note.style.left = `${20 + Math.random() * 110}px`; // random horizontal position inside container
-      note.style.fontSize = `${10 + Math.random() * 15}px`; // random size
-      note.textContent = '♪'; // music note character
-      notesContainer.appendChild(note);
-
-      // Remove note after animation ends
-      note.addEventListener('animationend', () => {
-        note.remove();
-      });
-    }
-  });</script>
+  // Optional: on window resize, update center coordinates dynamically (handled on next frame)
+</script>
 
 </body>
 </html>
