--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -222,13 +222,24 @@
         gap: 5px;
         margin-top: 15px;
       }
+    #current-image {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: border-radius 0.4s ease, transform 0.6s linear;
+    }
 
-      #current-image {
-        width: 120px;
-        height: 120px;
-        object-fit: cover;
-        border-radius: 10px;
-      }
+    /* On hover: circle + rotate fast */
+    #current-image:hover {
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    }
+
+    /* Keyframes for rotation */
+    @keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
     }
 
     .dropdown {
@@ -284,7 +295,7 @@
   color: #1DB954;
   margin-bottom: 10px;
   text-shadow:
-    0 0 5px #1db95488,  /* soft green glow */
+    0 0 7px #1db95488,  /* soft green glow */
     0 0 15px #1db95433;
 }
 
