--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -303,20 +303,14 @@
 
 #current-image {
   border-radius: 10px;
-  transition: border-radius 0.4s ease;
+  transition: border-radius 0.4s ease, transform 0.6s ease; /* smooth rotation */
   display: inline-block;
-  will-change: transform;
   transform-origin: center center;
 }
 
 #current-image:hover {
   border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  transform: rotate(360deg); /* rotate once smoothly */
 }
 
 
