--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -307,6 +307,14 @@
   transform: rotate(360deg); /* rotate once smoothly */
 }
 
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 
   </style>
 </head>
