--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -301,20 +301,19 @@
   margin-bottom: 25px;
 }
 
+#current-image {
+  border-radius: 10px;
+  transition: border-radius 0.4s ease, transform 0.6s ease;
+  display: inline-block;
+  transform-origin: center center;
+  transform: rotate(0deg);
+}
 
 #current-image:hover {
   border-radius: 50%;
-  transform: rotate(360deg); /* rotate once smoothly */
+  transform: rotate(180deg); /* rotate half a turn */
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
   </style>
 </head>
