--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -318,6 +318,21 @@
   to { transform: rotate(360deg); }
 }
 
+#current-name {
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #1DB954; /* Spotify green */
+  text-shadow: 0 0 5px #1DB95488;
+  margin-bottom: 4px;
+}
+
+#current-artist {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #CCCCCC;
+  font-style: italic;
+  text-shadow: 0 0 3px #66666655;
+}
 
 
   </style>
